# beach_robot_ws

./: .gitignore  CLAUDE.md  README.md
docs/: sand_tuning_guide.md
firmware/: platformio.ini
firmware/encoder_node/: encoder.cpp  encoder.h  encoder_config.h  main_enc.cpp
firmware/esp32_beach_controller/: COMM_PROTOCOL.md  board_config.md  esp32_beach_robot.ino
firmware/include/: buzzer.h  encoder.h  imu.h  motor.h  pid.h  ultrasonic.h  vibration.h
firmware/lastest_version/: platformio.ini
firmware/lastest_version/include/: encoder_config.h  imu.h  initial.h  motor.h  pid.h  ultrasonic.h
firmware/lastest_version/src/: buzzer.cpp  encoder.cpp  imu.cpp  initial.cpp  main.cpp  main_enc.cpp  ultrasonic.cpp
firmware/lastest_version/test/: esp32_main.cpp  pwm_motor.cpp
firmware/src/: enc_esp.cpp  encoder.cpp  imu.cpp  initial.cpp  main_esp.cpp  motor.cpp  pid.cpp  ultrasonic.cpp  vibration.cpp
firmware/test/: kp_pass_stage1.json  kp_pass_stage2.json  kp_pass_stage3.json  rear_revalidate_stage1.json  rear_right_finalize_stage1.json  rear_right_finalize_stage2.json  run_wheel_tuning.py  wheel_tuning.md
src/beach_robot_bringup/: package.xml  setup.cfg  setup.py
src/beach_robot_bringup/beach_robot_bringup/tools/: __init__.py  analyze_spin_tune.py  analyze_wheel_response.py  coverage_bag_report.py  drive_straight_odom.py  localization_pose_report.py  preflight_check.py  wheel_response_test.py
src/beach_robot_bringup/config/: robot.yaml
src/beach_robot_bringup/deploy/systemd/: beach_robot_bringup.service  guidline.md
src/beach_robot_bringup/deploy/udev/: 99-beach-robot.rules  guidline.md
src/beach_robot_bringup/docs/: ACCEPTANCE_TEST.md  CALIBRATION.md  WHEEL_RESPONSE_TEST.md
src/beach_robot_bringup/launch/: hardware_bringup.launch.py
src/beach_robot_bringup/scripts/: guidline.md  record_field_bag.sh
src/beach_robot_bringup/tools/: preflight_check.py
src/beach_robot_controller/: package.xml  setup.cfg  setup.py
src/beach_robot_controller/beach_robot_controller/: buzzer_action_server.py
src/beach_robot_controller/launch/: controller_bringup.launch.py
src/beach_robot_coverage_nav2/: README.md  package.xml  setup.cfg  setup.py
src/beach_robot_coverage_nav2/beach_robot_coverage_nav2/: coverage_follow_waypoints.py  generate_keepout_mask.py  obstacle_detector.py  zed_obstacle_stop_node.py
src/beach_robot_coverage_nav2/config/: coverage_navigate_to_pose.xml  keepout_mask.pgm  keepout_mask.pgm.beach_orig  keepout_mask.yaml  nav2_params_keepout.yaml  nav2_params_nokeepout.yaml
src/beach_robot_coverage_nav2/launch/: beach_cleaning_bringup.launch.py  zed_obstacle_stop.launch.py
src/beach_robot_description/: CMakeLists.txt  package.xml
src/beach_robot_description/config/: controllers.yaml
src/beach_robot_description/urdf/: beach_robot.urdf.xacro
src/beach_robot_esp32_bridge/: package.xml  setup.cfg  setup.py
src/beach_robot_esp32_bridge/beach_robot_esp32_bridge/: esp32_bridge_node.py
src/beach_robot_esp32_bridge/launch/: esp32_bridge.launch.py
src/beach_robot_gnss/: package.xml  setup.cfg  setup.py
src/beach_robot_gnss/beach_robot_gnss/: bridge_node.py  gnss_heading_to_imu_node.py  gps_jitter_node.py  um982_heading_node.py
src/beach_robot_gnss/docs/: guideline.md
src/beach_robot_gnss/launch/: um982_fix_nema.launch.py
src/beach_robot_interfaces/: CMakeLists.txt  package.xml
src/beach_robot_interfaces/action/: Buzzer.action
src/beach_robot_localization/: note.md  package.xml  setup.cfg  setup.py
src/beach_robot_localization/beach_robot_localization/: wheel_odometry_node.py
src/beach_robot_localization/config/: ekf_global.yaml  ekf_global_yaw_from_GNSS.yaml  ekf_imu_compare.yaml  ekf_imu_only.yaml  ekf_local.yaml  ekf_wheel_imu.yaml  ekf_wheel_only.yaml  navsat.yaml
src/beach_robot_localization/docs/: ODOM_TESTING.md
src/beach_robot_localization/launch/: gps_nmea.launch.py  localization.launch.py  localization_full_test.launch.py  localization_imu_compare.launch.py  localization_odom_test.launch.py  localization_with_gps.launch.py  localization_yaw_from_GNSS.launch.py  static_sensors_tf.launch.py
src/beach_robot_nav2/: CMakeLists.txt  package.xml
src/beach_robot_nav2/config/: nav2_params.yaml
src/beach_robot_nav2/launch/: nav2_bringup.launch.py
src/beach_robot_sim/: package.xml  setup.cfg  setup.py
src/beach_robot_sim/launch/: sim_bringup.launch.py
src/beach_robot_sim/worlds/: beach_flat.world
src/beach_robot_teleop/: package.xml  setup.cfg  setup.py
src/beach_robot_teleop/beach_robot_teleop/: teleop_4wd_node.py
src/beach_robot_teleop/launch/: teleop.launch.py
src/beach_wheel_mixer/: CMakeLists.txt  package.xml
src/beach_wheel_mixer/config/: mixer.yaml
src/beach_wheel_mixer/launch/: wheel_mps_mixer.launch.py
src/beach_wheel_mixer/src/: wheel_mps_mixer.cpp
src/zed_nav2_cloud_filter/: CMakeLists.txt  package.xml
src/zed_nav2_cloud_filter/config/: zedm_orin_nano_depth.yaml  zedm_orin_nano_imu_only.yaml
src/zed_nav2_cloud_filter/docs/: guideline.md
src/zed_nav2_cloud_filter/launch/: zedm_nav2_filtered.launch.py  zedm_static_tf.launch.py
src/zed_nav2_cloud_filter/src/: zed_cloud_filter_node.cpp
test/: send_wheel_cmd.py
