<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>beach_robot_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for Beach Robot hardware deployment</description>
  <maintainer email="todo@example.com">todo</maintainer>
  <license>MIT</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- stack -->
  <exec_depend>beach_robot_esp32_bridge</exec_depend>
  <exec_depend>beach_wheel_mixer</exec_depend>
  <exec_depend>beach_robot_localization</exec_depend>
  <exec_depend>beach_robot_gnss</exec_depend>
  <exec_depend>beach_robot_coverage_nav2</exec_depend>
  <exec_depend>zed_nav2_cloud_filter</exec_depend>

  <!-- tools -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
