<?xml version="1.0"?>
<package format="3">
  <name>beach_robot_esp32_bridge</name>
  <version>0.0.1</version>
  <description>Serial bridge between ROS2 and ESP32</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- runtime deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <!-- tell colcon build use  ament_python-->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
